# ShopSmart

./: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railpack-plan.json  railway.toml
apps/account/: admin.py  apps.py  models.py  serializer.py  signals.py  tests.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_alter_wallettransaction_options_address_region_and_more.py  0003_bankaccount_country_withdrawal_decided_at_and_more.py
apps/catalog/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py
apps/orders/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_remove_suborder_suborder_total_non_negative_and_more.py
core/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
mediafiles/products/: decoration.jfif  decoration2_XOayZB1.jfif  decoration3.jfif  download4_OZXMsna.jfif  frock_XSGTFt0.jfif  images2_Rs44gKW.jfif  images3_SQqb9Qq.jfif  laptop2.jfif  watch3_7Dy68RU.jfif
shopsmart/: index.html  package-lock.json  package.json  vite.config.js
shopsmart/src/: App.vue  main.js  style.css
shopsmart/src/assets/: download (1).jfif  football1.jfif  frock3.jfif  logo.jfif
shopsmart/src/layouts/: MainLayout.vue
shopsmart/src/pages/: AdminPanel.vue  AllProducts.vue  Cart.vue  Checkout.vue  Home.vue  Login.vue  ProductDetail.vue  Profile.vue  Register.vue  sellerDash.vue
shopsmart/src/router/: index.js
(+18 files in other folders)
