[tool.poetry]
name = "shopsmart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "shopsmart"}]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=6.0.4,<7.0.0"
djangorestframework = ">=3.17.1,<4.0.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
django-cors-headers = ">=4.9.0,<5.0.0"
pillow = ">=12.2.0,<13.0.0"
requests = ">=2.33.1,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
django-filter = ">=25.2,<26.0"
stripe = ">=15.1.0,<16.0.0"
gunicorn = ">=26.0.0,<27.0.0"
whitenoise = ">=6.12.0,<7.0.0"
dj-database-url = ">=3.1.2,<4.0.0"
psycopg2-binary = ">=2.9.12,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
